--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.10.6",
+    "@mui/joy": "^5.0.0-alpha.70",
+    "@mui/x-data-grid": "^6.0.1",
+    "mui": "^0.0.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
