--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.6",
     "@mui/joy": "^5.0.0-alpha.70",
+    "@mui/material": "^5.11.12",
     "@mui/x-data-grid": "^6.0.1",
     "mui": "^0.0.1",
     "prettier": "^2.8.4",
