--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "mui": "^0.0.1",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vis-network": "^9.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
